Fixed horizontal scroll problem with invisible labels

--- a/styles/sass/partials/_baseStyles.scss
+++ b/styles/sass/partials/_baseStyles.scss
@@ -9,7 +9,6 @@ html {
 body {
     max-width: 100%;
     overflow-x: hidden;
-    border: 1px solid red;
     @include boxReset;
 }
 
