--- a/styles/sass/partials/_mainStyles.scss
+++ b/styles/sass/partials/_mainStyles.scss
@@ -238,6 +238,11 @@
     background-color: $blue-sapphire;
     overflow-x: hidden;
     width: 100%;
+    max-width: 100%;
+
+    .wrapper {
+        overflow: hidden;
+    }
 
     form,
     .phoneEmailInputs {
@@ -257,6 +262,7 @@
         border-bottom: 1px solid white;
         background-color: $blue-sapphire;
         width: 100%;
+        max-width: 100%;
         height: 50px;
 
         &::placeholder {
@@ -270,14 +276,15 @@
     }
     textarea {
         height: 275px;
+        max-width: 100%;
         border: 1px solid white;
         &:focus,
         &:hover {
             border: 3px solid white;
         }
     }
-    label {
-        padding: 25px 5px 5px 5px;
+    .yourMessageLabel {
+        padding: 25px 5px 5px 2px;
         color: white;
         align-self: flex-start;
         width: 90%;
@@ -295,25 +302,27 @@
     }
     nav {
         max-width: 100%;
+        overflow: hidden;
     }
     ul {
         display: flex;
-        width: 100%;
-        max-width: 100%;
+        width: 95%;
+        max-width: 95%;
+        flex-wrap: wrap;
         justify-content: space-evenly;
         li {
             display: flex;
             justify-content: center;
-            max-width: 25%;
+            width: 20%;
+            max-width: 20%;
+        }
+        a {
+            max-width: 100%;
+            padding: 0 5px;
         }
         i {
             display: block;
-            width: 100%;
-
-            &:hover,
-            &:focus {
-                transform: none;
-            }
+            max-width: 100%;
         }
     }
 
